--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             Bangladesh</span></h2>
                     <p class="text-gray-500"> The recent floods in Noakhali have caused significant damage to homes
                         infrastructure. Your donation will help provide essential supplies and to those affected by this
-                        disaster. Every contribution, big or small, makes difference. Please join us in supporting the
+                        disaster. Every contribution, big or small, makes difference. Please join us supporting the
                         relief efforts and making a positive impact on the lives of those in need.</p>
                     <div>
                         <input id="donation-noakhali" type="text" placeholder="Write Donation Amount"
@@ -96,7 +96,7 @@
                     <h2 class="font-bold text-xl">Donate for <span id="area-feni">Flood Relief in Feni,Bangladesh</span>
                     </h2>
                     <p class="text-gray-500"> The recent floods in Feni have devastated local communities, leading to
-                        severe disruption and loss. Your generous donation will help provide immediate aid, including
+                        severe disruption and loss. Your generous donation will help provide immediate, including
                         food, clean water, and medical supplies, those affected by this calamity. Together, we can
                         offer crucial support and help rebuild lives in the aftermath of this disaster. Every
                         contribution counts towards making a real difference. Please consider donating today to assist
@@ -121,7 +121,7 @@
                     <h2 class="font-bold text-xl" id="area-quota">Aid for Injured in the Quota Movement</h2>
                     <p class="text-gray-500">The recent Quota movement has resulted in numerous injuries and significant
                         hardship for many individuals. Your support is crucial in providing medical assistance,
-                        rehabilitation, and necessary supplies to those affected. By contributing, you help ensure
+                        rehabilitation, and necessary supplies to those affected. By contributing, you ensure
                         injured individuals receive the care and support they need during this challenging time. Every
                         donation plays a vital role in alleviating their suffering and aiding in their recovery. Please
                         consider making a donation to support these brave individuals in their time of need.</p>
